<resources>
    <string name="app_name">Planning</string>

    <!-- ______________________module______________________ -->
    <!-- main -->
    <string name="main_drawer_planning_display">计划</string>
    <string name="main_drawer_planning_done">完成</string>
    <string name="main_drawer_history">历史</string>
    <string name="main_drawer_achievement">成就</string>
    <string name="main_drawer_extension">扩展</string>
    <string name="main_drawer_store">商店</string>
    <string name="main_drawer_settings">设置</string>

    <!-- login -->
    <string name="login_title">登录</string>
    <string name="login_account_error">用户名不符合规范</string>
    <string name="login_password_error">密码至少6位</string>

    <!-- planning_display -->
    <string name="planning_display_title">浏览计划</string>
    <string name="planning_display_toolbar_date">%1$d年%2$d月%3$d日</string>
    <string name="planning_display_date_select_hint">只有按月和按周窗口才能选择日期</string>
    <string name="planning_display_create_time">%1$d年%2$d月%3$d日%4$d:%5$d</string>
    <string name="planning_display_before_day">天前</string>
    <string name="planning_display_today">今天</string>

    <string name="planning_display_event_group_event_count">%1$d个计划</string>

    <string name="planning_display_spec_month_listitem_day">%1$d号</string>
    <string name="planning_display_spec_month_listitem_week">星期%1$s</string>

    <string name="planning_display_spec_week_listitem_learning">学</string>
    <string name="planning_display_spec_week_listitem_normal">普</string>
    <string name="planning_display_spec_week_listitem_date">%1$d月%2$d日，%3$s</string>

    <string name="planning_display_spec_event_detail_title">具体计划详情</string>
    <string name="planning_display_spec_event_detail_no_prompt">不提醒</string>
    <string name="planning_display_spec_event_detail_unfinished">未完成</string>

    <string name="planning_display_event_group_toolbar_title">计划组</string>
    <string name="planning_display_event_group_detail_create_time">创建于%1$s</string>

    <!-- planning_build -->
    <string name="planning_build_spec_normal_event">普通计划</string>
    <string name="planning_build_spec_learning_event">学习计划</string>
    <string name="planning_build_spec_description_validate_info">描述不能为空</string>
    <string name="planning_build_spec_event_strategy_select_dialog_title">选择计划方案</string>
    <string name="planning_build_spec_saved_successfully_info">具体计划保存成功</string>
    <string name="planning_build_abst_saved_successfully_info">模糊计划保存成功</string>

    <!-- planning_done -->
    <string name="planning_done_toolbar_title">@string/main_drawer_planning_done</string>
    <string name="planning_done_expected_finished_time">计划应于%1$d年%2$d月%3$d日完成</string>
    <string name="planning_done_event_not_finished">计划尚未完成</string>
    <string name="planning_done_finished_time">计划完成于%1$d年%2$d月%3$d日 %4$d:%5$d:%6$d</string>
    <string name="planning_done_learning_event_sequence">计划序号:%1$2d</string>

    <string name="planning_done_finish_learning_time">%1$d分钟</string>
    <string name="planning_done_finish_dialog_efficiency_title">选择效率</string>
    <string name="planning_done_finish_dialog_understand_degree_title">选择理解程度</string>
    <string name="planning_done_finish_learning_duration_validation_message">请填写学习时长</string>

    <!-- history -->
    <string name="history_title">@string/main_drawer_history</string>

    <!-- achievement -->
    <string name="achievement_title">@string/main_drawer_achievement</string>
    <string name="achievement_status_achieved">达成</string>
    <string name="achievement_status_not_achieved">未达成</string>

    <!-- extension -->
    <string name="extension_title">扩展</string>
    <string name="extension_read_title">阅读计划</string>
    <string name="extension_read_search_view_hint">搜索图书...</string>
    <string name="extension_read_load_prompt">没有更多图书了</string>

    <!-- settings -->
    <string name="settings_title">设置</string>

    <!-- common_select -->
    <string name="common_select_delete_toolbar_select_info">已选择%1$d个</string>
    <string name="common_select_add_dialog_title">创建新条目</string>
    <!-- ______________________module#end______________________ -->

    <!-- ______________________entity______________________ -->
    <!-- event -->
    <string name="event_process_common_not_started">未开始</string>

    <string name="event_process_learning_in_progress">进行中</string>
    <string name="event_process_learning_succeed">成功</string>
    <string name="event_process_learning_failed">失败</string>

    <string name="event_process_normal_todo">待办</string>
    <string name="event_process_normal_finished">完成</string>
    <string name="event_process_normal_expire">过期</string>

    <string name="event_type_spec_learning">学习计划</string>
    <string name="event_type_spec_normal">普通计划</string>
    <string name="event_type_abstract">模糊计划</string>
    <!-- learning_event_group -->
    <string name="learning_event_group_workload">%1$d人分</string>

    <string name="learning_event_group_strategy_comprehensive">理解型</string>
    <string name="learning_event_group_strategy_memorial">记忆型</string>
    <string name="learning_event_group_strategy_memorial_pro">强记型</string>
    <string name="learning_event_group_strategy_persistent">永久型</string>


    <string name="learning_event_group_efficiency_poor">差</string>
    <string name="learning_event_group_efficiency_general">一般</string>
    <string name="learning_event_group_efficiency_good">高效</string>
    <string name="learning_event_group_efficiency_excellent">非常高效</string>

    <string name="learning_event_group_understanding_degree_little">不太理解</string>
    <string name="learning_event_group_understanding_degree_mostly">大致理解</string>
    <string name="learning_event_group_understanding_degree_totally">完全理解</string>

    <!-- ______________________entity#end______________________ -->

</resources>
